server and docker work, faux nemo server proj and docker image defn