@@ -3,9 +3,6 @@ MAINTAINER USGS LCMAP http://eros.usgs.gov
 
 RUN apt-get update
 RUN apt-get install default-jdk curl vim -y
-
-COPY startup.sh /startup.sh
-COPY project.clj /project.clj
 COPY target/gaia-*-standalone.jar /
-
-CMD java -jar gaia-*-standalone.jar
+# java.xml.bind issue related to http-kit and java 9 https://github.com/http-kit/http-kit/issues/356
+CMD java --add-modules java.xml.bind -jar gaia-*-standalone.jar
